<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="commrhardman23.httpsgithub.intents.Questions"
    tools:showIn="@layout/activity_questions">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label"
        android:id="@+id/btnCheckAnswer"
        android:onClick="checkAnswer"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_option_1"
        android:id="@+id/rdobtnClarinet"
        android:layout_marginTop="131dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/txtvwQuestion"
        android:layout_alignStart="@+id/txtvwQuestion" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_option_2"
        android:id="@+id/rdobtnTrumpet"
        android:layout_alignTop="@+id/rdobtnClarinet"
        android:layout_alignRight="@+id/txtvwQuestion"
        android:layout_alignEnd="@+id/txtvwQuestion" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_option_3"
        android:id="@+id/rdobtnDrums"
        android:layout_below="@+id/rdobtnClarinet"
        android:layout_alignLeft="@+id/rdobtnClarinet"
        android:layout_alignStart="@+id/rdobtnClarinet"
        android:layout_marginTop="36dp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_option_4"
        android:id="@+id/rdobtnPiano"
        android:layout_alignBottom="@+id/rdobtnDrums"
        android:layout_alignLeft="@+id/rdobtnTrumpet"
        android:layout_alignStart="@+id/rdobtnTrumpet" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_text"
        android:id="@+id/txtvwQuestion"
        android:layout_marginBottom="28dp"
        android:textColor="#000000"
        android:layout_above="@+id/rdobtnTrumpet"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
